<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.dhrumilshah.tennis.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <ImageView
        style="@style/background_image"
        android:contentDescription="@string/tennis_background"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                style="@style/main_linear_layout"
                android:id="@+id/parent_linear_layout">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginEnd="@dimen/right_margin_first_ll"
                    android:layout_marginRight="@dimen/right_margin_first_ll">
                    <TextView
                        style="@style/sub_linear_layout_text_view_1"
                        android:text="@string/team_a" />
                    <TextView
                        android:id="@+id/team_a_score"
                        style="@style/sub_linear_layout_text_view_2"
                        android:text="@string/score_team_a"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="@dimen/set_margin_bottom">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/set"
                            style="@style/set_style"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/score_set_a_1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/score_set_a_1"
                                style="@style/set_style"/>
                            <TextView
                                android:id="@+id/score_set_a_2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/score_set_a_2"
                                style="@style/set_style"/>
                            <TextView
                                android:id="@+id/score_set_a_3"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/score_set_a_3"
                                style="@style/set_style"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/bottom_margin_second_ll">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:text="@string/total_fouls"
                            style="@style/total_foul"/>
                        <TextView
                            android:id="@+id/team_a_foul"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/total_fouls_a_score"
                            style="@style/total_foul"/>
                    </LinearLayout>
                    <TextView
                        style="@style/points_style"
                        android:text="@string/points" />
                    <Button
                        style="@style/plus_one_point_style"
                        android:text="@string/plus_one"
                        android:onClick="oneA" />
                    <TextView
                        style="@style/foul_style"
                        android:text="@string/fouls"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="8"
                            style="@style/fail_style"
                            android:text="@string/serve_fail"
                            android:onClick="serveFailA"
                            />
                        <TextView
                            android:id="@+id/serve_fail_a"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            style="@style/fail_point_style"
                            android:text="@string/serve_fail_a_score"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="8"
                            style="@style/fail_style"
                            android:text="@string/net_touch"
                            android:onClick="netTouchA"/>
                        <TextView
                            android:id="@+id/net_touch_a"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            style="@style/fail_point_style"
                            android:text="@string/net_touch_a_score" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="8"
                            style="@style/fail_style"
                            android:text="@string/other_fault"
                            android:onClick="otherFaultA"/>
                        <TextView
                            android:id="@+id/other_fault_a"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            style="@style/fail_point_style"
                            android:text="@string/other_fault_a_score" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/left_margin_first_ll"
                    android:layout_marginLeft="@dimen/left_margin_first_ll">
                    <TextView
                        style="@style/sub_linear_layout_text_view_1"
                        android:text="@string/team_b" />
                    <TextView
                        android:id="@+id/team_b_score"
                        style="@style/sub_linear_layout_text_view_2"
                        android:text="@string/score_team_b" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="@dimen/set_margin_bottom">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/set"
                            style="@style/set_style"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/score_set_b_1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/score_set_b_1"
                                style="@style/set_style"/>
                            <TextView
                                android:id="@+id/score_set_b_2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/score_set_b_2"
                                style="@style/set_style"/>
                            <TextView
                                android:id="@+id/score_set_b_3"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/score_set_b_3"
                                style="@style/set_style"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/bottom_margin_second_ll">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:text="@string/total_fouls"
                            style="@style/total_foul"/>
                        <TextView
                            android:id="@+id/team_b_foul"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/total_fouls_b_score"
                            style="@style/total_foul"/>
                    </LinearLayout>
                    <TextView
                        style="@style/points_style"
                        android:text="@string/points"/>
                    <Button
                        style="@style/plus_one_point_style"
                        android:text="@string/plus_one"
                        android:onClick="oneB" />
                    <TextView
                        style="@style/foul_style"
                        android:text="@string/fouls"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="8"
                            style="@style/fail_style"
                            android:text="@string/serve_fail"
                            android:onClick="serveFailB"/>
                        <TextView
                            android:id="@+id/serve_fail_b"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            style="@style/fail_point_style"
                            android:text="@string/serve_fail_b_score"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="8"
                            style="@style/fail_style"
                            android:text="@string/net_touch"
                            android:onClick="netTouchB"/>
                        <TextView
                            android:id="@+id/net_touch_b"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            style="@style/fail_point_style"
                            android:text="@string/net_touch_b_score"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="8"
                            style="@style/fail_style"
                            android:text="@string/other_fault"
                            android:onClick="otherFaultB"/>
                        <TextView
                            android:id="@+id/other_fault_b"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            style="@style/fail_point_style"
                            android:text="@string/other_fault_b_score"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/final_winner_message"
                android:layout_below="@id/parent_linear_layout"
                style="@style/winners_style" />
            <Button
                android:text="@string/reset"
                android:layout_below="@id/parent_linear_layout"
                android:onClick="reset"
                style="@style/reset_score"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>